--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "dist/auditing-entity.decorator.js",
   "types": "dist/auditing-entity.decorator.d.ts",
   "scripts": {
-    "publish": "tsc && npm publish --access public"
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "build": "tsc -p tsconfig.build.json",
+    "publish": "npm run build && npm publish --access public"
   },
   "keywords": [
     "TypeORM",
@@ -16,7 +19,11 @@
   "author": "Kibae Shin <kibae.shin@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/jest": "^28.1.6",
+    "jest": "^28.1.3",
     "prettier": "^2.7.1",
+    "sqlite3": "^5.0.9",
+    "ts-jest": "^28.0.7",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
@@ -26,5 +33,24 @@
   "peerDependencies": {
     "typeorm": "^0.3.0",
     "typescript": "^4.3.0"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": ".",
+    "testRegex": ".*\\.spec\\.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
+    },
+    "collectCoverageFrom": [
+      "**/*.(t|j)s"
+    ],
+    "testEnvironment": "node",
+    "roots": [
+      "<rootDir>/src/"
+    ]
   }
 }
