--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -29,3 +29,6 @@ jobs:
     - run: npm ci
     - run: npm run build
     - run: npm test
+    - name: Test Reporting
+      uses: phoenix-actions/test-reporting@v8
+
