--- a/package.json
+++ b/package.json
@@ -37,8 +37,7 @@
     "typeorm": "^0.3.0"
   },
   "peerDependencies": {
-    "typeorm": "^0.3.0",
-    "typescript": "^4.3.0"
+    "typeorm": "^0.3.0"
   },
   "jest": {
     "moduleFileExtensions": [
