Update package.json files, publish

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typeorm-auditing",
-  "version": "0.3.1",
+  "version": "0.3.2",
   "description": "TypeORM Auditing: Create history tables and manage changes of entity automatically.",
   "homepage": "https://github.com/kibae/typeorm-auditing",
   "repository": {
@@ -39,6 +39,9 @@
   "peerDependencies": {
     "typeorm": "^0.3.0"
   },
+  "files": [
+    "dist/**/*"
+  ],
   "jest": {
     "moduleFileExtensions": [
       "js",
