--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "type": "git",
     "url": "https://github.com/kibae/typeorm-auditing.git"
   },
-  "main": "dist/auditing-entity.decorator.js",
-  "types": "dist/auditing-entity.decorator.d.ts",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest",
     "test:watch": "jest --watch",
