--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@types/jest": "^28.1.6",
     "jest": "^28.1.3",
     "jest-junit": "^14.0.0",
+    "mysql2": "^2.3.3",
     "prettier": "^2.7.1",
     "sqlite3": "^5.0.9",
     "ts-jest": "^28.0.7",
@@ -60,6 +61,9 @@
     "roots": [
       "<rootDir>/src/"
     ],
-    "reporters": [ "default", "jest-junit" ]
+    "reporters": [
+      "default",
+      "jest-junit"
+    ]
   }
 }
