--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,18 +14,29 @@ jobs:
 
     runs-on: ubuntu-latest
 
-    strategy:
-      matrix:
-        node-version: [12.x, 14.x, 16.x]
+#    strategy:
+#      matrix:
+#        node-version: [12.x, 14.x, 16.x]
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+    services:
+      postgres:
+        image: mysql:latest
+        env:
+          MYSQL_ROOT_PASSWORD: local
+          MYSQL_DATABASE: playground
+        ports:
+          - "53306:3306"
 
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 16.x
       uses: actions/setup-node@v3
       with:
-        node-version: ${{ matrix.node-version }}
+        node-version: 16.x
         cache: 'npm'
+    - run: node -v
+    - run: npm -v
     - run: npm ci
     - run: npm run build
     - run: npm test
