--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,9 +5,11 @@ name: Node.js CI
 
 on:
   push:
-    branches: [ "main", "fix/*", "feature/*" ]
+    branches:
+      - '*'
   pull_request:
-    branches: [ "main", "fix/*", "feature/*" ]
+    branches:
+      - '*'
 
 jobs:
   build:
